Update about.css to fix list spacing (#61)
* Update about.css

Added more padding to OL

* Updated about.css

When reducing the grid-gap with a few px it solved the problem at least in Chrome and Internet Explorer. Not sure about Firefox. This may not be an ideal solution, so feel free to dismiss my these changes :)

* Justify li to not have weird number spacing

--- a/website/styles/about.css
+++ b/website/styles/about.css
@@ -4,13 +4,17 @@
 #wrapper {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-	grid-gap: 20px;
+	grid-gap: 16px;
 	justify-items: stretch;
 	margin: 20px;
 }
 
 /* Make sure the list is within the box */
 ol {
-	padding-left: 10px;
+	padding-left: 22px;
 	padding-right: 10px;
+}
+
+li {
+	text-align: justify;
 }
